# aosp-meson

sys-devel/aosp-headers/: Manifest  aosp-headers-9999.ebuild
sys-libs/aosp-logging/: Manifest  aosp-logging-9999.ebuild
sys-libs/aosp-logging/files/: meson.build
